Refactorisation de ChildAlertService et Class Utils.